cmake_minimum_required(VERSION 3.21)
project(Basic_C C)

set(CMAKE_C_STANDARD 99)

add_executable(Basic_C main.c test.h test.c)
add_executable(d1 d1/d_001.c)
add_executable(d2 d1/d_002.c)
add_executable(d3 d1/d_003.c)
add_executable(d4 d1/d_004.c)
add_executable(d5 d1/d_005.c)
add_executable(d6 d1/d_006.c)
add_executable(d7 d1/d_007.c d1/d_007.c)
add_executable(d8 d1/d_008.c)
add_executable(d9 d1/d_009.c)
add_executable(d10 d1/d_010.c)
add_executable(d11 d1/d_011.c)
add_executable(d12 d1/d_012.c)
add_executable(d13 d1/d_013.c d1/link_013_3.h d1/link_013_1.c d1/link_013_2.h d1/link_013_2.c)
add_executable(d14 d1/d_014.c d1/link_014_1.h d1/link_014_2.h d1/link_014_1.c d1/link_014_2.c)
add_executable(d15 d1/d_015.c d1/link_015.c)
add_executable(d16 d1/d_016.c)
add_executable(d17 d1/d_017.c)
add_executable(d18 d1/d_018.c)
add_executable(d19 d1/d_019.c)
add_executable(d20 d1/d_020.c d1/link_020.c d1/link_020.h)
add_executable(d21 d1/d_021.c d1/link_021_1.c d1/link_021_2.c)
add_executable(d22 d1/d_022.c)
add_executable(d23 d1/d_023.c)
add_executable(d24 d1/d_024.c)
#add_executable(d25 d1/d_025.c)
#add_executable(d26 d1/d_026.c)
#add_executable(d27 d1/d_027.c)
#add_executable(d28 d1/d_028.c)
#add_executable(d29 d1/d_029.c)
#add_executable(d30 d1/d_030.c)
#add_executable(d31 d1/d_031.c)
#add_executable(d32 d1/d_032.c)
#add_executable(d33 d1/d_033.c)
add_executable(a1 d2/a_001.c)
add_executable(a2 d2/a_002.c)
add_executable(a3 d2/a_003.c)
add_executable(a4 d2/a_004.c)
#add_executable(a5 d2/a_005.c)
#add_executable(a6 d2/a_006.c)
#add_executable(a7 d2/a_007.c)
#add_executable(a8 d2/a_008.c)
#add_executable(a9 d2/a_009.c)
#add_executable(a10 d2/a_010.c)
#add_executable(a11 d2/a_011.c)