cmake_minimum_required(VERSION 3.21)
project(Basic_C C)

set(CMAKE_C_STANDARD 99)

add_executable(Basic_C main.c test.h test.c)
add_executable(d1 d1/d_001.c)
add_executable(d2 d1/d_002.c)
add_executable(d3 d1/d_003.c)
add_executable(d4 d1/d_004.c)
add_executable(d5 d1/d_005.c)
add_executable(d6 d1/d_006.c)
add_executable(d7 d1/d_007.c d1/d_007.c)
add_executable(d8 d1/d_008.c)
add_executable(d9 d1/d_009.c)
add_executable(d10 d1/d_010.c)
add_executable(d11 d1/d_011.c)
add_executable(d12 d1/d_012.c)
add_executable(d13 d1/d_013.c d1/link_013_3.h d1/link_013_1.c d1/link_013_2.h d1/link_013_2.c)
add_executable(d14 d1/d_014.c d1/link_014_1.h d1/link_014_2.h d1/link_014_1.c d1/link_014_2.c)
add_executable(d15 d1/d_015.c d1/link_015.c)
add_executable(d16 d1/d_016.c)
add_executable(d17 d1/d_017.c)
add_executable(d18 d1/d_018.c)
add_executable(d19 d1/d_019.c)
add_executable(d20 d1/d_020.c d1/link_020.c d1/link_020.h)
add_executable(d21 d1/d_021.c d1/link_021_1.c d1/link_021_2.c)
add_executable(d22 d1/d_022.c)
add_executable(d23 d1/d_023.c)
add_executable(d24 d1/d_024.c)
add_executable(d25 d1/d_025.c d1/link_025.h)
add_executable(d26 d1/d_026.c)
add_executable(d27 d1/d_027.c)
add_executable(d28 d1/d_028.c d1/link_028.c)
add_executable(d29 d1/d_029.c)
add_executable(d30 d1/d_030.c)
add_executable(d31 d1/d_031.c)
add_executable(d32 d1/d_032.c)
add_executable(d33 d1/d_033.c)
add_executable(d34 d1/d_034.c)
add_executable(d35 d1/d_035.c)
add_executable(d36 d1/d_036.c)
add_executable(d37 d1/d_037.c)
add_executable(d38 d1/d_038.c)
add_executable(d39 d1/d_039.c)
add_executable(d40 d1/d_040.c)
add_executable(d41 d1/d_041.c)
add_executable(d42 d1/d_042.c)
add_executable(d43 d1/d_043.c)
add_executable(d44 d1/d_044.c)
add_executable(d45 d1/d_045.c)
add_executable(d46 d1/d_046.c)
add_executable(d47 d1/d_047.c)
add_executable(d48 d1/d_048.c)
add_executable(d49 d1/d_049.c)
add_executable(d50 d1/d_050.c)
add_executable(d51 d1/d_051.c)
add_executable(d52 d1/d_052.c)
add_executable(d53 d1/d_053.c)
add_executable(d54 d1/d_054.c)
add_executable(d55 d1/d_055.c)
add_executable(d56 d1/d_056.c d1/d_056.c)
add_executable(d57 d1/d_057.c)
add_executable(d58 d1/d_058.c)
add_executable(d59 d1/d_059.c)
add_executable(d60 d1/d_060.c)
add_executable(d61 d1/d_061.c)
add_executable(d62 d1/d_062.c)
add_executable(d63 d1/d_063.c)
add_executable(d64 d1/d_064.c)
add_executable(d65 d1/d_065.c)
add_executable(d66 d1/d_066.c)
add_executable(d67 d1/d_067.c)
add_executable(d68 d1/d_068.c)
add_executable(d69 d1/d_069.c)
add_executable(d70 d1/d_070.c)
add_executable(d71 d1/d_071.c)
add_executable(d72 d1/d_072.c)
add_executable(d73 d1/d_073.c)
add_executable(d74 d1/d_074.c)
add_executable(d75 d1/d_075.c)
add_executable(d76 d1/d_076.c)
add_executable(d77 d1/d_077.c)
add_executable(d78 d1/d_078.c)
add_executable(d79 d1/d_079.c)
add_executable(d80 d1/d_080.c)
add_executable(d81 d1/d_081.c)
add_executable(d82 d1/d_082.c)
add_executable(d83 d1/d_083.c)
add_executable(d84 d1/d_084.c)
add_executable(d85 d1/d_085.c)
add_executable(d86 d1/d_086.c)
add_executable(d87 d1/d_087.c)
add_executable(d88 d1/d_088.c)
add_executable(d89 d1/d_089.c)
add_executable(d90 d1/d_090.c)

add_executable(a1 d2/a_001.c)
add_executable(a2 d2/a_002.c)
add_executable(a3 d2/a_003.c)
add_executable(a4 d2/a_004.c)
add_executable(a5 d2/a_005.c)
#add_executable(a6 d2/a_006.c)
#add_executable(a7 d2/a_007.c)
#add_executable(a8 d2/a_008.c)
#add_executable(a9 d2/a_009.c)
#add_executable(a10 d2/a_010.c)
#add_executable(a11 d2/a_011.c)